--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,11 @@
             android:icon="@drawable/ic_glass_logo"
             android:label="@string/title_activity_roomba" >
         </activity>
+        <activity
+            android:name=".SettingActivity"
+            android:icon="@drawable/ic_glass_logo"
+            android:label="@string/title_activity_setting" >
+        </activity>
     </application>
 
 </manifest>
